修改配置文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#¶Ë¿ÚºÅ
 server.port=8088
+#gitHub
+github.client.id=6de21ba7e711c30c7cd6
+github.client.secret=8472dd6a9f16b79a8e145e7c4352e251db3fa942
+github.redirect.uri=http://localhost:8088/callback
